EPBDS-15093 Deployment REST API